--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,3 @@
-.App {
-  text-align: center;
-}
 
 .App-logo {
   height: 40vmin;
@@ -26,6 +23,21 @@
 
 .App-link {
   color: #61dafb;
+}
+
+.blob {
+   width: 20rem;
+}
+
+@media screen and (min-width: 768px) {
+   .blob {
+      width: 30rem;
+   }
+}
+@media screen and (min-width: 1200px) {
+   .blob {
+      width: 45rem;
+   }
 }
 
 @keyframes App-logo-spin {
